# log_analyzer

./: .actrc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  0002_widen_varchar_to_text.py
backend/src/log_analyzer/: __init__.py  config.py
backend/src/log_analyzer/api/: __init__.py  app.py  deps.py
backend/src/log_analyzer/api/routes/: __init__.py  ai.py  export.py  preview.py  reports.py  statistics.py  upload.py
backend/src/log_analyzer/cli/: __main__.py  config.py  log_finder.py  report_renderer.py
backend/src/log_analyzer/domain/: __init__.py  enums.py  interfaces.py  models.py
backend/src/log_analyzer/infrastructure/: __init__.py
backend/src/log_analyzer/infrastructure/ai/: __init__.py  provider.py
backend/src/log_analyzer/infrastructure/db/: __init__.py  models.py  repository.py  session.py
backend/src/log_analyzer/infrastructure/parsers/: __init__.py  combined.py
backend/src/log_analyzer/services/: __init__.py  ai_analyzer.py  parser.py  statistics.py  url_stats.py
backend/tests/: conftest.py  test_ai_service.py  test_config.py  test_log_finder.py  test_parser.py  test_parser_service.py  test_smoke.py  test_statistics.py
config/: config.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: AIPage.tsx  DashboardPage.tsx  ReportPage.tsx  UploadPage.tsx
