[project]
name = "log-analyzer-backend"
version = "0.1.0"
description = "Nginx log analyzer backend — FastAPI + Clean Architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.18",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic-ai-slim[openai]>=1.63",
    "structlog>=25.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "mypy>=1.19",
    "ruff>=0.15",
    "types-pyyaml>=6.0.12.20250915",
    "interrogate>=1.7.0",
    "pip-audit>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_analyzer"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "ASYNC", # flake8-async
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",  # assert used (OK in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["log_analyzer"]

# ── mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ── interrogate (docstring coverage) ─────────────────
[tool.interrogate]
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
fail-under = 100
verbose = 1
exclude = ["alembic", "tests", "node_modules", ".tmp", "frontend"]
